--- a/Project05/Makefile
+++ b/Project05/Makefile
@@ -16,7 +16,7 @@ LIB_MATH = -lm
 LIBS = $(LIB_MATH) -lSDL2 -lSDL2_gfx
 
 # List of demo programs
-DEMOS = bounce gravity pacman nbodies damping spaceinvaders
+DEMOS = spaceinvaders
 # List of C files in "libraries" that we provide
 STAFF_LIBS = test_util sdl_wrapper
 # List of C files in "libraries" that you will write
